--- a/style.css
+++ b/style.css
@@ -29,3 +29,21 @@ body {
     border: 50px solid transparent;
     border-bottom-color: #fff;
 }
+
+.kinetic::before {
+    transform: rotate(90deg);
+}
+
+@keyframes rotateA {
+    0%, 25% {
+        transform: rotate(0deg);
+    }
+
+    50%, 75% {
+        transform: rotate(180deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
