--- a/style.css
+++ b/style.css
@@ -28,10 +28,13 @@ body {
     height: 0;
     border: 50px solid transparent;
     border-bottom-color: #fff;
+    animation: rotateA 2s linear infinite 0.5s;
 }
 
 .kinetic::before {
     transform: rotate(90deg);
+    animation: rotateB 2s linear infinite;
+
 }
 
 @keyframes rotateA {
@@ -45,5 +48,19 @@ body {
 
     100% {
         transform: rotate(360deg);
+    }
+}
+
+@keyframes rotateB {
+    0%, 25% {
+        transform: rotate(90deg);
+    }
+
+    50%, 75% {
+        transform: rotate(270deg);
+    }
+
+    100% {
+        transform: rotate(450deg);
     }
 }
